# my-website

./: Cargo.toml  app.py  dev.py  index.html  requirements.txt
my_website/: __init__.py  routes.py
my_website/education/: routes.py
my_website/employment/: routes.py
my_website/main/: routes.py
my_website/static/css/: style.css
my_website/templates/: base.html  contact.html  home.html
my_website/templates/education/: cscc.html  dli-flc.html
my_website/templates/employment/: cscc.html  nationwide.html  us-army.html
src/: education.rs  employment.rs  footer.rs  home.rs  lib.rs  main.rs  navbar.rs  navigation.rs  not_found.rs
src/education/: cscc.rs  dliflc.rs  franklin.rs
src/employment/: army.rs  cscc.rs  nationwide.rs
src/navigation/: dropdown.rs
