[package]
name = "my-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.2.5", features = ["stable"] }
leptos_router = { version = "0.2.5", features = ["stable", "csr"] }
